Use own Rust dll to avoid admin requirement